[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/level/elements/StartLights.tscn" type="PackedScene" id=1]
[ext_resource path="res://_obs/StartPosition.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/level/elements/LevelStart.gd" type="Script" id=3]
[ext_resource path="res://common/EditorRectLabel.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=622]
extents = Vector2( 144, 4 )

[node name="LevelStart" type="Node2D"]
position = Vector2( 9, 23 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="StartLights" parent="." instance=ExtResource( 1 )]
position = Vector2( -7.62939e-06, -120 )

[node name="StartLine" type="Area2D" parent="."]
monitoring = false
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="StartLine"]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 622 )
disabled = true

[node name="ColorRect" type="ColorRect" parent="StartLine"]
margin_left = -496.0
margin_top = -24.0
margin_right = 496.0
margin_bottom = 24.0
grow_horizontal = 2

[node name="CameraPosition" type="Position2D" parent="."]

[node name="EditorRectLabel" parent="CameraPosition" instance=ExtResource( 4 )]
text = "camera
position"

[node name="DriveInPosition" type="Position2D" parent="."]
position = Vector2( 0, 1024 )
__meta__ = {
"_edit_group_": true
}

[node name="EditorRectLabel" parent="DriveInPosition" instance=ExtResource( 4 )]
text = "drive in
distance"

[node name="StartPositions" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 0, 192 )

[node name="StartPosition1" parent="StartPositions" instance=ExtResource( 2 )]
position = Vector2( -335, 5 )

[node name="StartPosition2" parent="StartPositions" instance=ExtResource( 2 )]
position = Vector2( -104, 0 )

[node name="StartPosition3" parent="StartPositions" instance=ExtResource( 2 )]
position = Vector2( 104, 0 )

[node name="StartPosition4" parent="StartPositions" instance=ExtResource( 2 )]
position = Vector2( 312, 0 )

[node name="StartPosition1_2" parent="StartPositions" instance=ExtResource( 2 )]
position = Vector2( -335, 285 )

[node name="StartPosition2_2" parent="StartPositions" instance=ExtResource( 2 )]
position = Vector2( -104, 280 )

[node name="StartPosition3_2" parent="StartPositions" instance=ExtResource( 2 )]
position = Vector2( 104, 280 )

[node name="StartPosition4_2" parent="StartPositions" instance=ExtResource( 2 )]
position = Vector2( 312, 280 )
